--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -7,6 +7,7 @@ parts:
     - file: some_content/overview.md
       sections:
       - file: some_content/text_and_code.ipynb
+      - file: RDM_intro_PhD.md
     - file: exercises
       sections:
       - file: exercises/001.md
