--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -18,14 +18,14 @@ parts:
       - file: Funder_DMP.md
       - file: PhD_supervisor_guideline.md
       - file: Community_funding_opportunity.md
-  - caption: MSc Student
+  - caption: MSc Students
     chapters:
     - file: MSc_index.md
       sections:
       - file: HREC_application.md
       - file: Data_management_plan.md
       - file: reused_3rdparty_data.md
-  - caption: Reseach Data Management for everyone
+  - caption: Reseach Data Management Topics for everyone
     chapters:
     - file: RDM_index.md
       sections:
