--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -6,46 +6,46 @@ parts:
     chapters:
       - file: phd/phd_index.md
         sections:
-          - file: RDM_intro_PhD.md
-          - file: support_and_requirment.md
-          - file: PhD_agreement.md 
-          - file: Data_management_plan_phd.md
+          - file: phd/RDM_intro_PhD.md
+          - file: phd/support_and_requirment.md
+          - file: phd/PhD_agreement.md 
+          - file: phd/Data_management_plan_phd.md
 
   - caption: Faculty Staff
     chapters:
       - file: staff/staff_index.md
         sections:
-          - file: Data_paragraph.md
-          - file: Funder_DMP.md
-          - file: PhD_supervisor_guideline.md
-          - file: Community_funding_opportunity.md
+          - file: staff/Data_paragraph.md
+          - file: staff/Funder_DMP.md
+          - file: staff/PhD_supervisor_guideline.md
+          - file: staff/Community_funding_opportunity.md
 
   - caption: MSc Students
     chapters:
       - file: msc/msc_index.md
         sections:
-          - file: HREC_application.md
-          - file: Data_management_plan_msc.md
-          - file: reused_3rdparty_data.md
+          - file: msc/HREC_application.md
+          - file: msc/Data_management_plan_msc.md
+          - file: msc/reused_3rdparty_data.md
 
   - caption: Research Data Management Topics for Everyone
     chapters:
       - file: general/RDM_index.md
         sections:
-          - file: Data_storage.md
-          - file: File_organization.md
-          - file: Documentation.md
-          - file: Publication.md
-          - file: Copyright_licensing.md
-          - file: Data_type_specific_RDM.md
+          - file: general/Data_storage.md
+          - file: general/File_organization.md
+          - file: general/Documentation.md
+          - file: general/Publication.md
+          - file: general/Copyright_licensing.md
+          - file: general/Data_type_specific_RDM.md
             sections:
-              - file: Numerical_simulation_data.md
-              - file: Experimental_data.md
-              - file: Geospecial_data.md
-              - file: Pysical_samples.md
-              - file: Reused_data.md
-          - file: RDM_tools.md
-          - file: Computing_facilities.md
+              - file: general/data_type/Numerical_simulation_data.md
+              - file: general/data_type/Experimental_data.md
+              - file: general/data_type/Geospecial_data.md
+              - file: general/data_type/Pysical_samples.md
+              - file: general/data_type/Reused_data.md
+          - file: general/RDM_tools.md
+          - file: general/Computing_facilities.md
 
   - caption: News
     chapters:
