--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -2,7 +2,7 @@ format: jb-book
 root: intro.md
 
 parts:
-    chapters:
+  - chapters:
       - file: phd/phd_index.md
         sections:
           - file: phd/RDM_intro_PhD.md
@@ -11,7 +11,7 @@ parts:
           - file: phd/data_management_plan_phd.md
 
 
-    chapters:
+   - chapters:
       - file: staff/staff_index.md
         sections:
           - file: staff/data_paragraph.md
@@ -20,7 +20,7 @@ parts:
           - file: staff/community_funding_opportunity.md
 
 
-    chapters:
+   - chapters:
       - file: msc/msc_index.md
         sections:
           - file: msc/HREC_application.md
@@ -28,7 +28,7 @@ parts:
           - file: msc/reused_3rdparty_data.md
 
 
-    chapters:
+   - chapters:
       - file: general/RDM_index.md
         sections:
           - file: general/data_storage.md
@@ -47,7 +47,7 @@ parts:
           - file: general/computing_facilities.md
 
 
-    chapters:
+   - chapters:
       - file: news/news_index.md
 
   - caption: Exercises
